--- a/app/src/main/res/layout/artist_result.xml
+++ b/app/src/main/res/layout/artist_result.xml
@@ -8,8 +8,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@color/colourBlack">
+        android:background="@color/colourBlack"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/artist_name"
@@ -28,9 +28,9 @@
             android:id="@+id/artist_picture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:scaleType="fitStart"
+            android:layout_gravity="center_horizontal"
             android:adjustViewBounds="true"
-            android:layout_gravity="center_horizontal"/>
+            android:scaleType="fitStart" />
     </LinearLayout>
 
 </RelativeLayout>
