--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -4,24 +4,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/colourBlack">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:context="dgmusic.AlbumActivity">
+        tools:context=".AlbumActivity"
+        android:background="@color/colourBlack">
 
-    <TextView
-        android:id="@+id/main2_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Title:"
-        android:textColor="@color/colourBlack"
-        android:textSize="60dp"
-        android:gravity="center_horizontal"
-        android:layout_gravity="center_horizontal"/>
+        <TextView
+            android:id="@+id/main2_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="10dp"
+            android:gravity="center_horizontal"
+            android:text="Title:"
+            android:textColor="@color/colourWhite"
+            android:textSize="40dp" />
 
     <ImageView
         android:id="@+id/main2_cover"
@@ -36,24 +38,20 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center"
-            android:gravity="center">
+            android:gravity="center"
+            android:background="@color/colourBlack">
 
             <TextView
                 android:id="@+id/main2_artistText"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:textColor="@color/colorBlue"
-                android:textSize="40dp"
-                style="?android:attr/borderlessButtonStyle"/>
-
-            <ImageButton
-                android:id="@+id/main2_artist"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:background="@null"
-                android:src="@mipmap/ic_launcher_add_bluewhite_round"/>
+                android:textColor="@color/colourWhite"
+                android:textSize="30dp"
+                android:textStyle="bold"
+                app:fontFamily="monospace" />
 
         </LinearLayout>
 
@@ -62,13 +60,14 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:background="@color/colourBlack">
 
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:background="@null"
-                android:src="@mipmap/ic_launcher_music_redwhite_round"/>
+                android:src="@android:drawable/stat_sys_headset" />
 
             <TextView
                 android:id="@+id/main2_type"
@@ -77,7 +76,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textColor="@color/colorRed"
-                android:textSize="25dp"/>
+                android:textSize="20dp" />
 
 
         </LinearLayout>
@@ -87,13 +86,15 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:background="@color/colourBlack">
 
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:background="@null"
-                android:src="@mipmap/ic_launcher_album_yellowwhite_round"/>
+                android:src="@android:drawable/ic_lock_silent_mode_off"
+                app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
 
             <TextView
                 android:id="@+id/main2_tracks"
@@ -102,7 +103,7 @@
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textColor="@color/colourYellow"
-                android:textSize="25dp"/>
+                android:textSize="20dp" />
 
         </LinearLayout>
 
@@ -115,51 +116,36 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:background="@color/colourBlack"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
+            android:orientation="horizontal"
+            android:background="@color/colourBlack">
 
             <ImageView
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@mipmap/ic_launcher_explicit_greenwhite_round"/>
-
-            <TextView
-                android:id="@+id/main2_explicit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:textColor="@color/colourGreen"
-                android:textSize="25dp"/>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
-                android:layout_gravity="center"
-                android:src="@mipmap/ic_launcher_play_blackwhite_round"/>
+                android:src="@mipmap/ic_launcher_play_blackwhite_round" />
 
             <Button
                 android:id="@+id/main2_tracksButton"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tracks"
                 android:layout_gravity="center"
-                android:gravity="center_horizontal"
-                android:textSize="20dp"
                 android:layout_marginTop="10dp"
-                android:textColor="@color/colourBlack"
-                style="?android:attr/borderlessButtonStyle"/>
+                android:gravity="center_horizontal"
+                android:text="@string/songs"
+                android:textColor="@color/colourWhite"
+                android:textSize="20dp" />
 
         </LinearLayout>
 
@@ -168,24 +154,26 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_gravity="center_horizontal"
-            android:gravity="center_horizontal">
+            android:gravity="center_horizontal"
+            android:background="@color/colourBlack">
 
             <ImageView
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginLeft="25dp"
                 android:background="@null"
-                android:src="@mipmap/ic_launcher_computer_pinkwhite_round"/>
+                android:src="@android:drawable/ic_menu_info_details"
+                app:srcCompat="@android:drawable/ic_menu_info_details" />
 
             <Button
                 android:id="@+id/main2_link"
+                style="?android:attr/borderlessButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:textColor="@color/colourPink"
-                android:textSize="20dp"
-                style="?android:attr/borderlessButtonStyle"/>
+                android:textSize="10dp" />
 
         </LinearLayout>
 
