--- a/app/src/main/res/layout/activity_album_artist.xml
+++ b/app/src/main/res/layout/activity_album_artist.xml
@@ -4,24 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colourBlack"
     >
 
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
-       tools:context="dgmusic.AlbumArtistActivity">
+       tools:context=".AlbumArtistActivity">
 
        <TextView
            android:id="@+id/main3_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
-           android:layout_marginTop="10dp"
-           android:text="Title:"
-           android:textColor="@color/colourBlack"
-           android:textSize="50dp"
            android:layout_gravity="center_horizontal"
-           android:gravity="center_horizontal"/>
+           android:layout_marginTop="10dp"
+           android:gravity="center_horizontal"
+           android:text="Title:"
+           android:textColor="@color/colourWhite"
+           android:textSize="50dp" />
 
        <ImageView
            android:id="@+id/main3_picture"
@@ -42,7 +43,7 @@
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@null"
-               android:src="@mipmap/ic_launcher_play_bluewhite_round"/>
+               android:src="@mipmap/ic_launcher_play_blackwhite"/>
 
            <Button
                android:id="@+id/main3_tracklist"
@@ -59,13 +60,13 @@
 
        <Button
            android:id="@+id/main3_link"
+           style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
-           android:textColor="@color/colorRed"
-           android:textSize="20dp"
-           style="?android:attr/borderlessButtonStyle"/>
+           android:textColor="@color/colourWhite"
+           android:textSize="20dp" />
 
    </LinearLayout>
 
