--- a/app/src/main/res/layout/activity_album_artist_track.xml
+++ b/app/src/main/res/layout/activity_album_artist_track.xml
@@ -5,21 +5,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context="dgmusic.AlbumArtistTrackActivity">
+    tools:context=".AlbumArtistTrackActivity"
+    android:background="@color/colourBlack">
 
     <LinearLayout
         android:id="@+id/main4_linear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:background="@color/colourBlack"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@null"
-            android:src="@mipmap/ic_launcher_play_bluewhite_round"/>
+            android:src="@mipmap/ic_launcher_play_blackwhite"
+            app:srcCompat="@mipmap/ic_launcher_play_blackwhite" />
 
         <TextView
             android:id="@+id/main4_tracks"
@@ -27,16 +30,16 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="Şarkılar"
-            android:textColor="@color/colorBlue"
+            android:textColor="@color/colourWhite"
             android:textSize="50dp" />
 
         <ImageButton
             android:id="@+id/main4_stop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="59dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="95dp"
             android:background="@null"
-            android:src="@drawable/pause" />
+            android:src="@android:drawable/ic_media_pause" />
 
     </LinearLayout>
 
@@ -45,6 +48,8 @@
         android:id="@+id/main4_rv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/main4_linear"></android.support.v7.widget.RecyclerView>
+        android:layout_below="@+id/main4_linear"
+        android:background="@color/colourBlack"
+        android:textColor="@color/colourWhite"></android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
