--- a/app/src/main/res/layout/activity_album_track.xml
+++ b/app/src/main/res/layout/activity_album_track.xml
@@ -5,21 +5,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="dgmusic.AlbumTrackActivity">
+    tools:context=".AlbumTrackActivity"
+    android:background="@color/colourBlack">
 
     <LinearLayout
         android:id="@+id/main5_linear"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal">
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@null"
-            android:src="@mipmap/ic_launcher_play_bluewhite_round"/>
+            android:src="@mipmap/ic_launcher_play_blackwhite"
+            app:srcCompat="@mipmap/ic_launcher_play_blackwhite" />
 
         <TextView
             android:id="@+id/main5_tracks"
@@ -28,15 +30,15 @@
             android:layout_gravity="center"
             android:text="@string/tracks"
             android:textColor="@color/colorBlue"
-            android:textSize="50dp"/>
+            android:textSize="50dp" />
 
         <ImageButton
             android:id="@+id/main5_stop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="46dp"
+            android:layout_height="match_parent"
             android:layout_marginLeft="100dp"
             android:background="@null"
-            android:src="@drawable/pause" />
+            android:src="@android:drawable/ic_media_pause" />
 
 
     </LinearLayout>
@@ -45,7 +47,7 @@
         android:id="@+id/main5_rv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/main5_linear">
-    </android.support.v7.widget.RecyclerView>
+        android:layout_below="@+id/main5_linear"
+        android:textColor="@color/colourWhite"></android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
